--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,28 @@
 .App {
   text-align: left;
-
 }
 
-.App-logo {
+/* a {
+  color: black;
+} */
+
+.brand-logo {
+  display: flex;
+  justify-content: center;
   animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 10px;
+  font-weight: 850;
+  margin: 75px 450px;
+  /* color: black;
+  border: 30px; */
+}
+
+.btn {
+  color: black;
 }
 
 .nav {
-  background: lightpink;
+  background: rgb(235, 26, 58);
   display: flex;
   flex-direction: row;
 }
