--- a/src/App.css
+++ b/src/App.css
@@ -12,20 +12,20 @@
   animation: App-logo-spin infinite 20s linear;
   height: 10px;
   font-weight: 850;
-  margin: 75px 450px;
+  margin: 300px 450px;
   /* color: black;
   border: 30px; */
 }
 
 .btn {
-  color: black;
+  color: red;
 }
 
-.nav {
+/* .nav {
   background: rgb(235, 26, 58);
   display: flex;
   flex-direction: row;
-}
+} */
 
 .link {
   text-align: center;
@@ -39,3 +39,4 @@ li {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
