--- a/src/App.css
+++ b/src/App.css
@@ -6,16 +6,16 @@
   color: black;
 } */
 
-.brand-logo {
+/* .brand-logo {
   display: flex;
   justify-content: center;
   animation: App-logo-spin infinite 20s linear;
   height: 10px;
   font-weight: 850;
   margin: 75px 450px;
-  /* color: black;
-  border: 30px; */
-}
+  color: black;
+  border: 30px;
+} */
 
 .btn {
   color: black;
