--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  background-color: #000000;
+  background-image: url("https://www.transparenttextures.com/patterns/dark-brick-wall.png");
+
 }
