--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Bebas Neue", sans-serif;
-  background-color: black;
+  background-color: red;
   background-image: url("https://www.transparenttextures.com/patterns/dark-brick-wall.png");
 };
