--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,7 +4,7 @@ body {
 }
 
 h1 {
-  color: red
+  color: red;
 }
 
 .App {
@@ -48,4 +48,3 @@ li {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
-
